feat: Add retry logic for stock prices, new update form, and UI improvements
- Implement retry logic with exponential backoff (500ms, 1s, 1.5s) in StockHoldingService
- Create NewUpdateModal component for adding updates from dashboard
- Add AccountServiceTest with 7 comprehensive test cases
- Implement account management (add/delete accounts) with modals
- Sort LifeLog entries by startDate (earliest first)
- Rename 'Life Events' tab to 'Life'
- Fix stock portfolio calculation bug (NULL prices issue)
- Update AccountSidebar with add/delete functionality

--- a/docker-compose.monitoring.yml
+++ b/docker-compose.monitoring.yml
@@ -21,6 +21,7 @@ services:
       - '--web.enable-admin-api'
     networks:
       - monitoring
+      - default
     depends_on:
       - alertmanager
     healthcheck:
