--- a/frontend/Dockerfile.dev
+++ b/frontend/Dockerfile.dev
@@ -1,5 +1,5 @@
 # Development Dockerfile with hot reload
-FROM node:18-alpine
+FROM node:21-alpine
 
 WORKDIR /app
 
@@ -12,11 +12,8 @@ RUN npm install
 # Copy source code
 COPY . .
 
-# Expose port
-EXPOSE 5173
+# Expose port (Vite default is 5173, but config uses 5174)
+EXPOSE 5174
 
-# Install curl for health checks
-RUN apk add --no-cache curl
-
-# Start development server with hot reload
-CMD ["npm", "run", "dev", "--", "--host", "0.0.0.0"]
+# Run development server
+CMD ["npm", "run", "dev"]
