Migrate stock data retrieval to Yahoo Finance and refine portfolio calculations
- Replaced Finnhub API with Yahoo Finance API
- Implemented dynamic account summary logic using database accounts
- Added live stock balance synchronization to accounts table
- Cleaned up legacy Finnhub client and error handler

--- a/.env.example
+++ b/.env.example
@@ -6,8 +6,10 @@ POSTGRES_DB=personal_platform
 POSTGRES_USER=admin
 POSTGRES_PASSWORD=your_secure_password_here
 
+
 # API Keys (NEVER commit real values to git)
 FINNHUB_API_KEY=your_finnhub_api_key_here
+TMDB_API_KEY=your_tmdb_api_key_here
 GOOGLE_CLOUD_PROJECT_ID=your_google_project_id
 GOOGLE_CLOUD_LOCATION=us-central1
 
