--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -38,6 +38,8 @@ services:
       
       # API Keys
       FINNHUB_API_KEY: ${FINNHUB_API_KEY}
+      TMDB_API_KEY: ${TMDB_API_KEY}
+      tmdb.api.key: ${TMDB_API_KEY}
       GOOGLE_CLOUD_PROJECT_ID: ${GOOGLE_CLOUD_PROJECT_ID:-}
       GOOGLE_CLOUD_LOCATION: ${GOOGLE_CLOUD_LOCATION:-us-central1}
       GOOGLE_CALENDAR_CREDENTIALS_PATH: /app/config/google/google-calendar-credentials.json
