--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,11 @@ services:
     volumes:
       - "./volume:/var/lib/localstack"
       - "/var/run/docker.sock:/var/run/docker.sock"
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
 
   postgres:
     image: postgres:16
@@ -29,6 +34,11 @@ services:
       interval: 5s
       timeout: 5s
       retries: 5
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
 
   backend:
     build:
@@ -43,6 +53,8 @@ services:
       - POSTGRES_USER=admin
       - POSTGRES_PASSWORD=password
       - GOOGLE_CALENDAR_CREDENTIALS_PATH=/app/config/google/google-calendar-credentials.json
+      - TMDB_API_KEY=${TMDB_API_KEY}
+      - FINNHUB_API_KEY=${FINNHUB_API_KEY}
     volumes:
       - ./backend:/app
       - ~/.m2:/root/.m2
@@ -50,6 +62,11 @@ services:
     depends_on:
       postgres:
         condition: service_healthy
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
 
   frontend:
     build:
@@ -65,6 +82,11 @@ services:
       - VITE_API_BASE_URL=http://localhost:8080
     depends_on:
       - backend
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
 
   prometheus:
     image: prom/prometheus:latest
@@ -76,8 +98,11 @@ services:
     command:
       - '--config.file=/etc/prometheus/prometheus.yml'
     restart: unless-stopped
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
 
 volumes:
   postgres_data:
-    external: true
-    name: personal_webpage_postgres_data_dev
