Add Vite env types and news feature updates

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -138,3 +138,9 @@ monitoring.alerts.error-rate.evaluation-window=300000
 monitoring.alerts.availability.warning-threshold=0.99
 monitoring.alerts.availability.critical-threshold=0.95
 monitoring.alerts.availability.evaluation-window=600000
+
+# News Configuration
+# News Keys (Environment Variables override these if set)
+# Get News API Key here: https://newsapi.org/register (It's free for dev)
+news.api.key=${NEWS_API_KEY:}
+news.gemini.key=${GEMINI_API_KEY:}
