--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,6 +40,22 @@ services:
         max-size: "10m"
         max-file: "3"
 
+  pgadmin:
+    image: dpage/pgadmin4
+    container_name: pgadmin
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@admin.com
+      PGADMIN_DEFAULT_PASSWORD: password
+    ports:
+      - "5050:80"
+    depends_on:
+      - postgres
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
+
   backend:
     build:
       context: ./backend
@@ -55,6 +71,8 @@ services:
       - GOOGLE_CALENDAR_CREDENTIALS_PATH=/app/config/google/google-calendar-credentials.json
       - TMDB_API_KEY=${TMDB_API_KEY}
       - FINNHUB_API_KEY=${FINNHUB_API_KEY}
+      - NEWS_API_KEY=${NEWS_API_KEY}
+      - GEMINI_API_KEY=${GEMINI_API_KEY}
     volumes:
       - ./backend:/app
       - ~/.m2:/root/.m2
