refactor: refine portfolio return calculations and baseline logic

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -50,6 +50,7 @@ content.cache.ttl.hours=24
 openlibrary.api.base.url=https://openlibrary.org
 openlibrary.api.timeout=10000
 tmdb.api.base.url=https://api.themoviedb.org/3
+tmdb.api.key=${TMDB_API_KEY:}
 tmdb.api.timeout=10000
 
 # Caching Configuration
