Refactor backend and frontend, improve test resilience, and fix news transaction bug

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -65,7 +65,8 @@ logging.level.org.springframework.web=DEBUG
 # Google Calendar Configuration
 google.calendar.credentials.file.path=${GOOGLE_CALENDAR_CREDENTIALS_PATH:/home/seanmah/.config/google/google-calendar-credentials.json}
 google.calendar.application.name=Personal Dashboard
-google.calendar.default.calendar.id=primary
+google.calendar.default.calendar.id=sean.mahoney743@gmail.com
+google.calendar.additional.calendar.ids=en.usa#holiday@group.v.calendar.google.com
 google.calendar.api.timeout=30000
 google.calendar.cache.ttl.minutes=15
 google.calendar.max.events.per.request=250
